Fix spacing

--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-top: -2vw;
 }
 
 .forecast-container {
